@@ -97,6 +97,7 @@ Effects:
   o Fix `repeat' sometimes stopping repeating too soon.  (robs)
   o Fix `repeat' sometimes repeating wrong audio segments.  (robs)
   o Fix [2332343] 'silence' segfault with certain lengths. (cbagwell)
+  o Fix `silence' empty output file with A-law input.  (robs)
   o Fix temporary file problems in Windows (cygwin) with normalise and
     other effects.  (robs)
   o Fix [2779041] spectrogram PNG file is invalid on Windows.  (robs)
